uodate reservation